--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -267,9 +267,30 @@
                 <p>Message</p>
                 <textarea placeholder="Great to know about you..."></textarea>
             </div>
-            <button class="send" type="submit"><i class="fa-regular fa-paper-plane"></i> Send Message</button>
+            <button class="send" type="submit" onclick="sendmail()"><i class="fa-regular fa-paper-plane"></i> Send Message</button>
         </div>
     </section>
+<script>
+    function sendmail() {
+      Email.send({
+        Host: "smtp.gmail.com",
+        Username: $(),
+        Password: "Enter your password",
+        To: 'receiver@email_address.com',
+        From: "sender@email_address.com",
+        Subject: "Sending Email using javascript",
+        Body: "Well that was easy!!",
+        Attachments: [
+          {
+            name: "File_Name_with_Extension",
+            path: "Full Path of the file"
+          }]
+      })
+        .then(function (message) {
+          alert("Mail has been sent successfully")
+        });
+    
+</script>
     <!-- ----------------------------------------------------------------------- -->
     <!--                               footer html                               -->
     <!-- ----------------------------------------------------------------------- -->
